@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2025-09-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-09-17T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -24,6 +19,11 @@
     },
     {
       "timestamp": "2025-09-23T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-09-26T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
